syntax = "proto3";

package grpc.zkrpc.service;

message ZkGenProofRequest {
  string proverAddress = 1;
  string satelliteAddress = 2;
  uint64 epochForProof = 3;
  uint64 blockHeightFromForProof = 4;
  uint64 blockHeightToForProof = 5;
}

message ZkWeight{
  string address = 1;
  uint64 alphaWeight = 2;
  uint64 betaWeight = 3;
}

message ZkGenProofResponse {
  string alphaProofMerkleRoot = 1;
  string betaProofMerkleRoot = 2;
  // hashmap of terminal address and its weight
  uint64 satelliteAlphaWeight = 3;
  uint64 satelliteBetaWeight = 4;
  repeated ZkWeight terminalWeights = 8;
  // map<string, ZkWeight> terminalWeights = 5;
}

message ZkVerifyProofRequest {
  string proverAddress = 1;
  string satelliteAddress = 2;
  uint64 epochForProof = 3;
  uint64 blockHeightFromForProof = 4;
  uint64 blockHeightToForProof = 5;
  string alphaProofMerkleRoot = 6;
  string betaProofMerkleRoot = 7;
  
}

message ZkVerifyProofResponse {
  bool isValid = 1;  
}

service ZkService {
  rpc GenProof(ZkGenProofRequest) returns (ZkGenProofResponse);
  rpc VerifyProof(ZkVerifyProofRequest) returns (ZkVerifyProofResponse);
}
